# MLmodel_online_project

./: README.md
thrift_c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
thrift_c++/caffe_online/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
thrift_c++/caffe_online/data/: cifar10_full_train_test.prototxt  cifar_iter_400.caffemodel
thrift_c++/caffe_online/gen-cpp/: CaffeService.cpp  CaffeService.h  CaffeService_server.skeleton.cpp  caffe_server_constants.cpp  caffe_server_constants.h  caffe_server_types.cpp  caffe_server_types.h
thrift_c++/caffe_online/include/: .caffe_prediction_model.h.swo  .caffe_prediction_model.h.swp  caffe_classifier.hpp  caffe_prediction_model.h
thrift_c++/caffe_online/src/: .caffe_prediction_model.cpp.swp  a.out  caffe_classifier.cpp  caffe_client.cpp  caffe_prediction_model.cpp  caffe_server.cpp  cifar10_full_train_test.prototxt  label_name.txt  lenet_iter_5000.caffemodel  lenet_train_test.prototxt
thrift_c++/caffe_online/src/examples/face_recongnition/: mean.binaryproto
thrift_c++/caffe_online/src/examples/face_recongnition/img_test_lmdb/: data.mdb  lock.mdb
thrift_c++/caffe_online/src/examples/myfile/: mean.binaryproto
thrift_c++/caffe_online/src/examples/myfile/img_test_lmdb/: data.mdb  lock.mdb
thrift_c++/caffe_online/test/: .caffe.cpp.swp  .caffe_predict.cpp.swp  a.out  test_opencv.cpp
thrift_c++/caffe_online/thrift/: caffe_server.thrift
thrift_c++/data/: dianping_qqweixin_comm_feature_scale.libsvmmodel  dianping_qqweixin_comm_feature_scale.libsvmout  dianping_qqweixin_comm_feature_scale.model  dianping_qqweixin_comm_feature_scale.out
thrift_c++/demo/: .CMakeLists.txt.swp  CMakeLists.txt  CppClient.cpp  TutorialClient  TutorialServer
thrift_c++/demo/cpp/: Makefile  TutorialClient  libtutorialgencpp.la
thrift_c++/demo/cpp/.deps/: CppClient.Po  CppServer.Po
thrift_c++/demo/cpp/.libs/: TutorialClient  TutorialServer  lt-TutorialClient
thrift_c++/demo/cpp/gen-cpp/: shared_types.lo
thrift_c++/demo/cpp/gen-cpp/.deps/: Calculator.Plo  tutorial_constants.Plo
thrift_c++/include/: mlmodel.h
thrift_c++/libsvm_online/: 2  CMakeCache.txt  Makefile  cmake_install.cmake
thrift_c++/libsvm_online/conf/: model.xml
thrift_c++/libsvm_online/data/: dianping_qqweixin_comm_feature_scale.libsvm  dianping_qqweixin_comm_feature_scale.libsvmout  dianping_qqweixin_comm_feature_scale.out
thrift_c++/libsvm_online/demo/: CMakeCache.txt  Makefile  TutorialClient  cmake_install.cmake
thrift_c++/libsvm_online/demo/cpp/: CppClient.cpp  TutorialServer
thrift_c++/libsvm_online/demo/cpp/.libs/: lt-TutorialServer
thrift_c++/libsvm_online/demo/cpp/gen-cpp/: Calculator.lo  SharedService.lo  shared_constants.lo  tutorial_constants.lo  tutorial_types.lo
thrift_c++/libsvm_online/demo/cpp/gen-cpp/.deps/: SharedService.Plo  shared_constants.Plo  shared_types.Plo  tutorial_types.Plo
thrift_c++/libsvm_online/include/: mlmodel.h
thrift_c++/libsvm_online/src/: MlModelClient.cpp  MlModelClientv2.cpp  MlModelServer.cpp
thrift_c++/libsvm_online/src/gen-cpp/: MLOlineService.cpp  MLOlineService_server.skeleton.cpp  mlmodel_online_project_constants.cpp  mlmodel_online_project_types.cpp
thrift_c++/libsvm_online/src/ml_libs/libsvm/: svm-predict  svm.cpp  svm.h
thrift_c++/libsvm_online/test/: xml_parse_test.cpp
thrift_c++/src/: MlModelServer.cpp
thrift_c++/src/gen-cpp/: MLOlineService.cpp  MLOlineService.h  MLOlineService_server.skeleton.cpp  mlmodel_online_project_constants.cpp  mlmodel_online_project_constants.h  mlmodel_online_project_types.cpp  mlmodel_online_project_types.h
thrift_c++/src/ml_libs/libsvm/: eval.cpp  eval.h  svm-predict.c  svm-scale  svm-train  svm-train.c
thrift_c++/src/ml_models/: .ml_model.cpp.swp  .ml_model.h.swp  ml_model.cpp  ml_model.h  mlmodel.cpp
thrift_c++/test/: .libsvm_test.cpp.swp  .logger_test.cpp.swp  libsvm_test.c  libsvm_test.cpp  logger_test.cpp  xml_parse_test.cpp
thrift_c++/thrift/: mlmodel_online_project.thrift
thrift_c++/xgboost_online/code/: .feature_proc.py.swp  .soft_compare.py.swo  .soft_compare.py.swp  .xgboost_feature_select.py.swp  .xgboost_train.py.swm  .xgboost_train.py.swn  .xgboost_train.py.swo  .xgboost_train.py.swp  CMakeLists.txt  xgboost.config  xgboost.model  xgboost_online_predict.cpp  xgboost_online_predict.h  xgboost_train.py
thrift_c++/xgboost_online/data/: 20160928_test.libsvm  20170224_train.libsvm
thrift_java/: README  README.md  main.cpp
